--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Personalized Page Links</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <style>
-           body {
+        body {
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 20px;
@@ -79,6 +80,12 @@
         }
         .link-item {
             margin-bottom: 15px;
+            display: flex;
+            align-items: center;
+            gap: 15px;
+        }
+        .link-content {
+            flex-grow: 1;
         }
         .link-name {
             font-weight: 500;
@@ -99,6 +106,10 @@
         .link-url:hover {
             background-color: #d4e6f7;
         }
+        .qr-code {
+            width: 100px;
+            height: 100px;
+        }
         .error-message {
             color: #e74c3c;
             text-align: center;
@@ -115,28 +126,12 @@
             .links-container {
                 flex-direction: column;
             }
-        }
-           .link-item {
-            margin-bottom: 15px;
-            display: flex;
-            align-items: center;
-            gap: 15px;
-        }
-        .link-content {
-            flex-grow: 1;
-        }
-        .qr-code {
-            width: 100px;
-            height: 100px;
-        }
-        @media (max-width: 768px) {
             .link-item {
                 flex-direction: column;
                 align-items: flex-start;
             }
         }
     </style>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -157,108 +152,42 @@
     </div>
 
     <script>
-   function fetchUserLinks(type) {
-    const input = type === 'username' ? document.getElementById('usernameInput').value.trim() : document.getElementById('referralInput').value.trim();
-    const errorMessage = document.getElementById('errorMessage');
+    function fetchUserLinks(type) {
+        const input = type === 'username' ? document.getElementById('usernameInput').value.trim() : document.getElementById('referralInput').value.trim();
+        const errorMessage = document.getElementById('errorMessage');
 
-    if (!input) {
-        errorMessage.textContent = `Please enter a valid ${type}`;
-        return;
-    }
-
-    const scriptUrl = 'https://script.google.com/macros/s/AKfycbxODgmwA9CEYgT4e8UqOy62-ZtGwi6aPbsVJ3zzUK7dO9Fed_Xa6gVjhVw0KUmSliBs/exec';
-
-    const params = new URLSearchParams();
-    params.append(type, input);
-
-    fetch(`${scriptUrl}?${params.toString()}`)
-        .then(response => response.text()) // Change this to text() instead of json()
-        .then(text => {
-            try {
-                const data = JSON.parse(text);
-                if (data.error) {
-                    errorMessage.textContent = data.error;
-                    document.getElementById('linksList').innerHTML = '';
-                } else {
-                    errorMessage.textContent = '';
-                    displayLinks(data);
-                }
-            } catch (e) {
-                console.error('Error parsing response:', e);
-                errorMessage.textContent = 'Error processing the response. Please try again later.';
-                document.getElementById('linksList').innerHTML = '';
-            }
-        })
-        .catch(error => {
-            errorMessage.textContent = 'Error fetching your links. Please try again later.';
-            console.error('Error:', error);
-        });
-}
-    const scriptUrl = 'https://script.google.com/macros/s/AKfycbxODgmwA9CEYgT4e8UqOy62-ZtGwi6aPbsVJ3zzUK7dO9Fed_Xa6gVjhVw0KUmSliBs/exec';
-
-    const params = new URLSearchParams();
-    params.append(type, input);
-
-    fetch(`${scriptUrl}?${params.toString()}`)
-        .then(response => response.json())
-        .then(data => {
-            if (data.error) {
-                errorMessage.textContent = data.error;
-                document.getElementById('linksList').innerHTML = '';
-            } else {
-                errorMessage.textContent = '';
-                displayLinks(data);
-            }
-        })
-        .catch(error => {
-            errorMessage.textContent = 'Error fetching your links. Please try again later.';
-            console.error('Error:', error);
-        });
-        function displayLinks(data) {
-            const linksList = document.getElementById('linksList');
-            const headers = data[0];
-            const userRow = data[1];
-            
-            let optinHtml = '<div class="links-column"><div class="link-group"><h2>Optin Page Links</h2>';
-            let infoHtml = '<div class="links-column"><div class="link-group"><h2>Info Page Links</h2>';
-
-            const allLinks = [
-                {sheet: 'General Optin', display: 'GENERAL OPTIN', type: 'optin'},
-                {sheet: 'Driver Optin', display: 'DRIVER OPTIN', type: 'optin'},
-                {sheet: 'Rider Optin', display: 'RIDER OPTIN', type: 'optin'},
-                {sheet: 'Rep Optin', display: 'REPS OPTIN', type: 'optin'},
-                {sheet: 'General', display: 'GENERAL INFO PAGE', type: 'info'},
-                {sheet: 'Driver', display: 'DRIVER INFO PAGE', type: 'info'},
-                {sheet: 'Rider', display: 'RIDER INFO PAGE', type: 'info'},
-                {sheet: 'Rep', display: 'REPS INFO PAGE', type: 'info'}
-            ];
-
-            allLinks.forEach(function(link) {
-                const columnIndex = headers.indexOf(link.sheet);
-                if (columnIndex !== -1 && userRow[columnIndex]) {
-                    const linkHtml = `<div class="link-item">
-                        <span class="link-name">${link.display}</span>
-                        <a href="${userRow[columnIndex]}" target="_blank" class="link-url">${userRow[columnIndex]}</a>
-                    </div>`;
-                    
-                    if (link.type === 'optin') {
-                        optinHtml += linkHtml;
-                    } else {
-                        infoHtml += linkHtml;
-                    }
-                }
-            });
-
-            optinHtml += '</div></div>';
-            infoHtml += '</div></div>';
-
-            linksList.innerHTML = optinHtml + infoHtml;
+        if (!input) {
+            errorMessage.textContent = `Please enter a valid ${type}`;
+            return;
         }
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
-    <script>
-    function fetchUserLinks(type) {
-        // ... (previous fetchUserLinks function remains the same) ...
+        const scriptUrl = 'https://script.google.com/macros/s/AKfycbxODgmwA9CEYgT4e8UqOy62-ZtGwi6aPbsVJ3zzUK7dO9Fed_Xa6gVjhVw0KUmSliBs/exec';
+
+        const params = new URLSearchParams();
+        params.append(type, input);
+
+        fetch(`${scriptUrl}?${params.toString()}`)
+            .then(response => response.text())
+            .then(text => {
+                try {
+                    const data = JSON.parse(text);
+                    if (data.error) {
+                        errorMessage.textContent = data.error;
+                        document.getElementById('linksList').innerHTML = '';
+                    } else {
+                        errorMessage.textContent = '';
+                        displayLinks(data);
+                    }
+                } catch (e) {
+                    console.error('Error parsing response:', e);
+                    errorMessage.textContent = 'Error processing the response. Please try again later.';
+                    document.getElementById('linksList').innerHTML = '';
+                }
+            })
+            .catch(error => {
+                errorMessage.textContent = 'Error fetching your links. Please try again later.';
+                console.error('Error:', error);
+            });
     }
 
     function displayLinks(data) {
