--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Personalized Page Links</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
@@ -15,18 +15,16 @@
             color: #333;
         }
         .container {
-            max-width: 1000px;
+            max-width: 800px;
             margin: 0 auto;
             background-color: white;
             border-radius: 12px;
             padding: 30px;
             box-shadow: 0 4px 20px rgba(0,0,0,0.1);
         }
-        h1 {
+        h1, h2 {
             color: #2c3e50;
             text-align: center;
-            margin-bottom: 30px;
-            font-weight: 700;
         }
         .input-section {
             display: flex;
@@ -59,39 +57,19 @@
         button:hover {
             background-color: #2980b9;
         }
-        .links-container {
-            display: flex;
-            gap: 30px;
-        }
-        .links-column {
-            flex: 1;
-        }
-        .link-group {
+        .link-item {
             background-color: #f8f9fa;
             border-radius: 8px;
             padding: 20px;
             margin-bottom: 20px;
-        }
-        .link-group h2 {
-            margin-top: 0;
-            margin-bottom: 15px;
-            color: #2c3e50;
-            font-size: 20px;
-        }
-        .link-item {
-            margin-bottom: 15px;
-            display: flex;
-            align-items: center;
-            gap: 15px;
-        }
-        .link-content {
-            flex-grow: 1;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
         .link-name {
-            font-weight: 500;
+            font-weight: 700;
             color: #34495e;
             display: block;
-            margin-bottom: 5px;
+            margin-bottom: 10px;
+            font-size: 18px;
         }
         .link-url {
             display: block;
@@ -102,13 +80,31 @@
             background-color: #e9f2fb;
             border-radius: 4px;
             transition: background-color 0.3s;
+            margin-bottom: 15px;
         }
         .link-url:hover {
             background-color: #d4e6f7;
         }
+        .qr-code-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
         .qr-code {
-            width: 100px;
-            height: 100px;
+            margin-bottom: 10px;
+        }
+        .download-qr {
+            padding: 8px 16px;
+            background-color: #2ecc71;
+            color: white;
+            text-decoration: none;
+            border-radius: 4px;
+            font-size: 14px;
+            transition: background-color 0.3s;
+        }
+        .download-qr:hover {
+            background-color: #27ae60;
         }
         .error-message {
             color: #e74c3c;
@@ -122,32 +118,21 @@
             color: #7f8c8d;
             margin: 10px 0;
         }
-        @media (max-width: 768px) {
-            .links-container {
+        @media (max-width: 600px) {
+            .container {
+                padding: 20px;
+            }
+            .input-row {
                 flex-direction: column;
             }
-            .link-item {
-                flex-direction: column;
-                align-items: flex-start;
+            button {
+                width: 100%;
             }
-        }
-        .spinner {
-            display: none;
-            width: 50px;
-            height: 50px;
-            border: 3px solid rgba(0,0,0,.3);
-            border-radius: 50%;
-            border-top-color: #3498db;
-            animation: spin 1s ease-in-out infinite;
-            margin: 20px auto;
-        }
-        @keyframes spin {
-            to { transform: rotate(360deg); }
         }
     </style>
 </head>
 <body>
-    <div class="container">
+     <div class="container">
         <h1>Your Personalized Page Links</h1>
         <div id="errorMessage" class="error-message"></div>
         <div class="input-section">
@@ -160,6 +145,9 @@
                 <input type="text" id="referralInput" placeholder="Enter your referral ID" />
                 <button onclick="fetchUserLinks('referral')">Get My Links</button>
             </div>
+        </div>
+        <div id="linksList"></div>
+    </div>
         </div>
        <div id="spinner" class="spinner"></div>
        <div id="linksList" class="links-container"></div>
