--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <style>
         body {
-            font-family: 'Nuntio Sans', sans-serif;
+            font-family: 'Nunito Sans', sans-serif;
             margin: 0;
             padding: 20px;
             background-color: #f4f7f9;
